--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.13",
     "nodemon": "^2.0.3",
+    "unique-slug": "^2.0.2",
     "uuid": "^8.0.0"
   }
 }
